--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -7,5 +7,5 @@
   <%= f.number_field :cost %>
   <%= f.label "Made in:" %>
   <%= f.text_field :country_of_origin %>
-  <%= f.submit  %>
+  <%= f.submit class: "btn" %>
 <% end %>
