--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_for @product do |f| %>
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name, class: "form-control" %>
   <%= f.label :cost %>
-  <%= f.number_field :cost %>
+  <%= f.number_field :cost, class: "form-control" %>
   <%= f.label "Made in:" %>
-  <%= f.text_field :country_of_origin %>
-  <%= f.submit  %>
+  <%= f.text_field :country_of_origin, class: "form-control" %>
+  <%= f.submit class: "btn" %>
 <% end %>
