--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,11 +1,3 @@
-<h1>Edit product</h1>
+<h1>Edit Product</h1>
 
-<%= form_for @product do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :cost %>
-  <%= f.number_field :cost %>
-  <%= f.label "Made in:" %>
-  <%= f.text_field :country_of_origin %>
-  <%= f.submit class: "btn" %>
-<% end %>
+<%= render "layouts/product_form" %>
