--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,5 @@
-<h1>New product</h1>
+<h1>New Product</h1>
 
-<%= form_for @product do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name, class: "form-control" %>
-  <%= f.label :cost %>
-  <%= f.number_field :cost, class: "form-control" %>
-  <%= f.label "Made in:" %>
-  <%= f.text_field :country_of_origin, class: "form-control" %>
-  <%= f.submit class: "btn" %>
-<% end %>
+<%= render "layouts/product_form" %>
+
+<p><%= link_to "Return to products", products_path %></p>
