--- a/app/views/layouts/_product_form.html.erb
+++ b/app/views/layouts/_product_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :name, class: "form-control" %>
   <%= f.label :cost %>
   <%= f.number_field :cost, class: "form-control" %>
-  <%= f.label "Made in:" %>
+  <%= f.label :country_of_origin %>
   <%= f.text_field :country_of_origin, class: "form-control" %>
   <%= f.submit class: "btn" %>
 <% end %>
