--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
   <h4>Product reviews:</h4>
 
   <% @product.reviews.each do |review| %>
-      <p><%= link_to review.name, product_review_path(@product, review) %></p>
+      <p><%= link_to review.author, product_review_path(@product, review) %> <%= review.rating %> star review</p>
   <% end %>
 <% else %>
   <p>No reviews are listed for this product.</p>
@@ -13,7 +13,8 @@
 
 <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
 
-<p><%= link_to "Edit", edit_product_path(@product) %></p>
-<p><%= link_to "Delete", product_path(@product), :data => {:confirm => "You sure?", :method => "delete"} %></p>
-
-<p><%= link_to "Return to products", products_path %></p>
+<div class="links">
+  <p><%= link_to "Edit product", edit_product_path(@product) %></p>
+  <p><%= link_to "Delete product", product_path(@product), :data => {:confirm => "You sure?", :method => "delete"} %></p>
+  <p><%= link_to "Return to products", products_path %></p>
+</div>
