--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,11 +1,5 @@
-<h1>Add a new review:</h1>
+<h1>Add a review:</h1>
 
-<%= form_for [@product, @review] do |f| %>
-  <%= f.label :author %>
-  <%= f.text_field :author, class: "form-control" %>
-  <%= f.label "Review" %>
-  <%= f.text_area :content_body, class: "form-control", :rows=>10, :cols=>50 %>
-  <%= f.label :rating %>
-  <%= f.number_field :rating, min: 0, max: 5, class: "form-control" %>
-  <%= f.submit class: "btn" %>
-<% end %>
+<%= render "layouts/review_form" %>
+
+<p><%= link_to "Return to product", product_path(@product) %></p>
