--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,12 +1,36 @@
 $darkerblue-color: rgb(39, 71, 89);
 $text-color: rgb(53, 90, 111);
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 body {
   background: rgb(236,102,173);
   background: linear-gradient(284deg, rgba(236,102,173,1) 0%, rgba(27,214,226,1) 100%) fixed;
   background-repeat: no-repeat;
 }
 
+.container {
+  font-family: 'Roboto Mono', monospace;
+}
 
+p {
+  font-size: medium;
+  font-weight: bold;
+  text-shadow: 0 0 3px #ffffff;
+}
+
+.header {
+  margin-top: 5vw;
+  text-align: center;
+  color: rgb(0, 255, 106);
+  text-shadow: 0 0 3px #96ee96;
+  h3 {
+    margin-bottom: 10vw;
+  }
+  h4 {
+    color: rgb(208, 255, 226);
+    text-shadow: 0 0 3px #ffffff;
+    margin-bottom: 5vw;
+  }
+}
 
 .links {
   font-weight: bold;
