--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
-<div class="">
-<h1>Another World</h1>
-<h2>Vintage Synths, Forgotten Gadgets, and Vinyl</h2>
-
-<p>Welcome to <em>Another World</em>. You're in the right place. </p>
+<div class="header">
+  <h1>Another World</h1>
+  <h3>Vintage Synths, Forgotten Gadgets, and Vinyl</h3><br>
+  <h4><em>Welcome to Another World. You're in the right place.</em> </h4>
+  <p><%= link_to "View our inventory", products_path %></p>
+</div>
