--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,13 @@
 <h1>Products</h1>
-
-<% if @products.any? %>
-    <% @products.each do |product| %>
-      <p><%= link_to product.name, product_path(product) %></p>
-    <% end %>
-<% else %>
-  <p>There are no products yet.</p>
-<% end %>
+  <% if @products.any? %>
+      <% @products.each do |product| %>
+      <div class="list">
+        <p><%= link_to product.name, product_path(product) %></p>
+      </div>
+      <% end %>
+  <% else %>
+    <p>There are no products yet.</p>
+  <% end %>
 
 
 <p><%= link_to "Add new product", new_product_path %></p>
