--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_for [@product, @review] do |f| %>
   <%= f.label :author %>
   <%= f.text_field :author, class: "form-control" %>
-  <%= f.label "Review" %>
+  <%= f.label :content_body %>
   <%= f.text_area :content_body, class: "form-control", :rows=>10, :cols=>50 %>
   <%= f.label :rating %>
   <%= f.number_field :rating, min: 0, max: 5, class: "form-control" %>
