--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,5 +2,7 @@
   <h1>Another World</h1>
   <h3>Vintage Synths, Forgotten Gadgets, and Vinyl</h3><br>
   <h4><em>Welcome to Another World. You're in the right place.</em> </h4>
-  <p><%= link_to "View our inventory", products_path %></p>
+  <div class="links">
+    <p><%= link_to "View the inventory", products_path %></p>
+  </div>
 </div>
