--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,15 @@
 <h1>Products</h1>
+<div class="list">
   <% if @products.any? %>
-      <% @products.each do |product| %>
-      <div class="list">
-        <p><%= link_to product.name, product_path(product) %></p>
-      </div>
-      <% end %>
+    <% @products.each do |product| %>
+      <p><%= link_to product.name, product_path(product) %></p>
+    <% end %>
   <% else %>
     <p>There are no products yet.</p>
   <% end %>
+</div>
 
-
-<p><%= link_to "Add new product", new_product_path %></p>
+<div class="links">
+  <p><%= link_to "Add new product", new_product_path %></p>
+  <p><%= link_to "Return home", root_path %></p>
+</div>
