--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render "layouts/product_form" %>
 
-<p><%= link_to "Return to products", products_path %></p>
+<div class="links">
+  <p><%= link_to "Return to products", products_path %></p>
+</div>
