sort products alphabetically, update faker seeds to follow content_body length validation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ProductReview</title>
+    <title>Another World</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
