--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,6 +1,6 @@
-<h1>Product: <%= @product.name %></h1>
-<h2>Reviewed by: <%= @review.author %></h2>
-<h3><%= @review.content_body %></h3>
+<h1><%= @product.name %></h1>
+<h3>Reviewed by: <%= @review.author %></h3>
+<h4><%= @review.content_body %></h4>
 
 <div class="links">
   <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
