--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 </div>
 
-<div class="links">
-  <p><%= link_to "Add new product", new_product_path %></p>
+<div class="blue-links">
+  <p><%= link_to "Add a new product", new_product_path %></p>
   <p><%= link_to "Return home", root_path %></p>
 </div>
