--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,6 +2,6 @@
 
 <%= render "layouts/product_form" %>
 
-<div class="links">
+<div class="blue-links">
   <p><%= link_to "Return to products", products_path %></p>
 </div>
