--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render "layouts/review_form" %>
 
-<p><%= link_to "Return to product", product_path(@product) %></p>
+<div class="blue-links">
+  <p><%= link_to "Return to product", product_path(@product) %></p>
+</div>
