--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 </div>
 
-<div class="links">
+<div class="blue-links">
 <p><%= link_to "Add a review", new_product_review_path(@product) %></p>
   <p><%= link_to "Edit product", edit_product_path(@product) %></p>
   <p><%= link_to "Delete product", product_path(@product), :data => {:confirm => "You sure?", :method => "delete"} %></p>
