--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -9,3 +9,7 @@
   <%= f.number_field :rating, min: 0, max: 5, class: "form-control" %>
   <%= f.submit class: "btn" %>
 <% end %>
+
+<div class="blue-links">
+  <p><%= link_to "Return to review", product_review_path(@product, @review) %></p>
+</div>
