--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -2,7 +2,7 @@
 <h3>Reviewed by: <%= @review.author %></h3>
 <h4><%= @review.content_body %></h4>
 
-<div class="links">
+<div class="blue-links">
   <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
   <p><%= link_to "Delete review", product_review_path(@product, @review), :data => {:confirm => "Are you sure?", :method => "delete"} %></p>
   <p><%= link_to "Return to product", product_path(@product) %></p>
