--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,6 @@
   <h3>Vintage Synths, Forgotten Gadgets, and Vinyl</h3><br>
   <h4><em>Welcome to Another World. You're in the right place.</em> </h4>
   <div class="blue-links">
-    <p><%= link_to "View the inventory", products_path %></p>
+    <p><%= link_to "Enter", products_path %></p>
   </div>
 </div>
