--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 body {
-  background: rgb(162,0,86);
-  background: linear-gradient(284deg, rgba(162,0,86,1) 0%, rgba(0,78,83,1) 100%) fixed;
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 70%, rgba(251,255,65,1) 70%, rgba(255,109,0,1) 100%) fixed;
   background-repeat: no-repeat;
 }
 
@@ -9,12 +9,32 @@ body {
   font-family: 'Roboto Mono', monospace;
   color: #ffffff;
   h1 {
-    margin-top: 4vw;
-    color: rgb(0, 255, 106);
-    text-shadow: 0 0 2px #96ee96;
+    font-weight: bolder;
+    position: relative;
+    margin-top: 30px;
+    color: rgb(47, 0, 218);
+    text-shadow: 0 0 1px #a596ee;
   }
-  h3 {
-    margin-bottom: 3vw;
+  h4 {
+    margin-top: 10px;
+    margin-bottom: 70px;
+  }
+}
+
+.header {
+  margin-top: 20px;
+  text-align: center;
+  text-shadow: 0 0 2px #a596ee;
+  h5 {
+    color: rgb(255, 255, 228);
+    text-shadow: 0 0 2px #ffffff;
+    font-size: larger;
+    margin-bottom: 190px;
+  }
+  h4 {
+    color: rgb(255, 255, 228);
+    text-shadow: 0 0 2px #ffffff;
+    margin-bottom: 110px;
   }
 }
 
@@ -36,7 +56,7 @@ p {
   margin-top: 3vw;
   margin-bottom: 2vw;
   p a {
-    color: rgb(208, 255, 226);
+    color: rgb(255, 255, 230);
     text-shadow: 0 0 2px #ffffffad;
     &:hover {
       color:rgb(255, 255, 255);
@@ -58,26 +78,31 @@ p {
   margin-top: 1vw;
   margin-bottom: 2vw;
   p a {
-    color: rgb(208, 255, 226);
+    color: rgb(255, 255, 230);
     text-shadow: 0 0 2px #ffffff76;
     &:hover {
-      color:rgb(255, 255, 255);
+      color:rgb(89, 43, 255);
     }
+  }
+  h4 {
+    margin-bottom: 15px;
+    text-decoration: underline;
   }
 }
 
-.header {
-  margin-top: 4vw;
-  text-align: center;
-  color: rgb(0, 255, 106);
-  text-shadow: 0 0 2px #96ee96;
-  h3 {
-    margin-bottom: 10vw;
-  }
+.content-body {
+  background-color: rgba(0, 0, 0, 0.249);
+  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-style: none;
+  border-radius: 2px;
+  height: fit-content;
+  width: fit-content;
+  padding: 20px;
+  margin-top: 10px;
+  margin-bottom: 70px;
   h4 {
-    color: rgb(208, 255, 226);
-    text-shadow: 0 0 2px #ffffff;
-    margin-bottom: 8vw;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
 }
 
@@ -98,18 +123,18 @@ p {
   font-weight: bold;
   a {
     color: rgb(0, 166, 255);
-    text-shadow: 0 0 2px #affaffa7;
+    text-shadow: 0 0 1px #affaffa7;
     &:hover {
-      color:rgb(199, 216, 225);
+      color:rgb(255, 252, 230);
     }
   }
 }
 
 .btn {
-  margin-top: 3vw;
+  margin-top: 25px;
   margin-bottom: 3vw;
   background-color: rgb(255, 255, 255);
-  color: rgb(0, 166, 255);
+  color: rgb(0, 0, 0);
   border-radius: 5px;
   border: none;
   &:hover {
@@ -119,7 +144,7 @@ p {
 }
 
 label {
-  margin-top: 1vw;
+  margin-top: 3px;
 }
 
 .errors {
@@ -127,4 +152,14 @@ label {
   h3 {
     color: rgb(255, 255, 255);
   }
+}
+
+.form {
+  background-color: rgba(0, 0, 0, 0.249);
+  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  max-width: 500px;
+  min-width: 200px;
+  border-style: none;
+  border-radius: 6px;
+  padding: 10px;
 }
