--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,3 +1,7 @@
 <h1>Edit Product</h1>
 
 <%= render "layouts/product_form" %>
+
+<div class="blue-links">
+  <p><%= link_to "Return to product", product_path(@product) %></p>
+</div>
