--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,10 +2,16 @@
 <h3>Price: $<%= @product.cost %></h3>
 
 <% if @product.reviews.any? %>
-  <h4>Product reviews:</h4>
 <div class="review_list">
+  <h4>Product reviews:</h4>
   <% @product.reviews.each do |review| %>
-      <p><%= link_to review.author, product_review_path(@product, review), class: 'links'%> <%= review.rating %> star review</p>
+    <p><%= link_to review.author, product_review_path(@product, review), class: 'links'%></p>
+    <% review.rating.to_i.times do %>
+      <span class="glyphicon glyphicon-star"></span>
+    <% end %>
+    <% review.blank_stars.times do %>
+      <span class="glyphicon glyphicon-star-empty"></span>
+    <% end %>
   <% end %>
 <% else %>
   <p>No reviews are listed for this product.</p>
