--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -144,6 +144,11 @@ p {
   }
 }
 
+.actions {
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+
 label {
   margin-top: 3px;
 }
@@ -161,6 +166,23 @@ label {
   max-width: 500px;
   min-width: 200px;
   border-style: none;
-  border-radius: 6px;
+  border-radius: 5px;
   padding: 10px;
+}
+
+.authenticate {
+  color: black;
+  position: absolute;
+  top: 20%;
+  left: 40%;
+  right: 40%;
+  margin: -25px 0 0 -25px;
+  background-color: rgba(255, 255, 255, 0.893);
+  box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-style: none;
+  border-radius: 5px;
+  padding: 20px;
+  h2 {
+    margin-top: 5px;
+  }
 }
