--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Flickr Clone</a>
+          <a class="navbar-brand" href="/">Another World</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-            <li><a href="/images">Instruments</a></li>
+            <li><a href="/products">Instruments</a></li>
             <li><a href="/tags">Tags</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -37,12 +37,6 @@
               <li><%= link_to 'Sign Up', new_user_registration_path %></li>
             <% end %>
           </ul>
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
         </div>
       </div>
     </nav>
