--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,18 +1,20 @@
-<h1>Instruments</h1>
-<div class="list">
-  <% if @products.any? %>
-    <% @products.each do |product| %>
-      <p><%= link_to product.name, product_path(product) %></p>
+<div class="products">
+  <h1>Instruments</h1>
+  <div class="list">
+    <% if @products.any? %>
+      <% @products.each do |product| %>
+        <p><%= link_to product.name, product_path(product) %></p>
+      <% end %>
+    <% else %>
+      <p>There are no products yet.</p>
     <% end %>
-  <% else %>
-    <p>There are no products yet.</p>
-  <% end %>
-</div>
+  </div>
 
-<div class="blue-links">
-  <% if current_user && current_user.admin %>
-    <p><%= link_to "Add a new product", new_product_path %></p>
-  <% end %>
+  <div class="blue-links">
+    <% if current_user && current_user.admin %>
+      <p><%= link_to "Add a new product", new_product_path %></p>
+    <% end %>
 
-  <p><%= link_to "Return home", root_path %></p>
+    <p><%= link_to "Return home", root_path %></p>
+  </div>
 </div>
