--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -11,7 +11,9 @@
 </div>
 
 <div class="blue-links">
-  <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
-  <p><%= link_to "Delete review", product_review_path(@product, @review), :data => {:confirm => "Are you sure?", :method => "delete"} %></p>
+  <% if current_user && current_user.admin || current_user && current_user == @review.user %>
+    <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
+    <p><%= link_to "Delete review", product_review_path(@product, @review), :data => {:confirm => "Are you sure?", :method => "delete"} %></p>
+  <% end %>
   <p><%= link_to "Return to product", product_path(@product) %></p>
 </div>
