--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -5,6 +5,24 @@ body {
   background-repeat: no-repeat;
 }
 
+.navbar-custom {
+  background: linear-gradient(0deg, rgb(255, 255, 255) 60%, rgba(95,201,129,1) 70%, rgb(25, 0, 60) 100%) fixed;
+}
+/* change the brand and text color */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+  color: rgb(255, 255, 255);
+}
+/* change the link color */
+.navbar-custom .navbar-nav .nav-link {
+  color: rgb(255, 255, 255);
+}
+/* change the color of active or hovered links */
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+  color: #ffffff;
+}
+
 .container {
   font-family: 'Roboto Mono', monospace;
   color: #ffffff;
@@ -12,7 +30,7 @@ body {
     font-weight: bolder;
     position: relative;
     margin-top: 75px;
-    color: rgb(47, 0, 218);
+    color: rgb(40, 0, 186);
     text-shadow: 0 0 1px #a596ee;
   }
   h4 {
