--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -11,7 +11,7 @@
 </div>
 
 <div class="blue-links">
-  <% if current_user && current_user.admin || current_user && current_user == @review.user %>
+  <% if current_user && current_user.admin %>
     <p><%= link_to "Edit review", edit_product_review_path(@product, @review) %></p>
     <p><%= link_to "Delete review", product_review_path(@product, @review), :data => {:confirm => "Are you sure?", :method => "delete"} %></p>
   <% end %>
