--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 body {
   background: rgb(0,0,0);
-  background: linear-gradient(0deg, rgba(0,0,0,1) 60%, rgba(251,255,65,1) 60%, rgb(95, 201, 129) 100%) fixed;
+  background: linear-gradient(0deg, rgb(7, 0, 18) 60%, rgba(251,255,65,1) 60%, rgb(95, 201, 129) 100%) fixed;
   background-repeat: no-repeat;
 }
 
@@ -52,7 +52,7 @@ body {
   h4 {
     color: rgb(254, 254, 242);
     text-shadow: 0 0 2px #ffffff;
-    margin-bottom: 110px;
+    margin-bottom: 60px;
   }
 }
 
@@ -194,7 +194,8 @@ label {
   top: 20%;
   left: 40%;
   right: 40%;
-  margin: -25px 0 0 -25px;
+  // margin: -25px 0 0 -25px;
+  width: fit-content;
   background-color: rgba(255, 255, 255, 0.893);
   box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-style: none;
@@ -203,4 +204,20 @@ label {
   h2 {
     margin-top: 5px;
   }
+}
+
+.flash {
+  text-align: center;
+}
+
+.avatar {
+  padding: 5px;
+  border-radius: 50%;
+  height : 50px;
+  width : 50px;
+}
+
+.about {
+  margin-top: 100px;
+  text-align: center;
 }
