--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,6 @@
 <div class ="about">
   <h1>About Us</h1>
-  
+  <div class ="paragraph">
+    <p>Somewhere beyond the horizon<br> in a time that never was, Another World exists.<br> We are a collective of sonic travelers, scouring the cosmos<br> in a never-ending search for all things auditory. Our mission is to<br> keep a running database of every sonic instrument known to humankind.<br> We encourage our users to leave reviews for instruments they own<br> or have had the opportunity to play or hear, culminating in<br> a rich library of user experiences to inspire the<br> next generation of aural astronauts.</p>
+  </div>
 </div>
