--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
   <h1>Another World</h1>
-  <h5>Vintage Synths and Forgotten Gadgets</h5>
+  <h5>A Database of All Things Auditory</h5>
   <h4><em>Welcome to Another World. You're in the right place.</em> </h4>
 
 </div>
